# OpenCV-Practice

./: .gitignore  README.md  pyproject.toml
